--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,8 @@ development:
   database: fleema
   pool: 5
   host: localhost
-  username: fleema
-  password: Fleema@123
+  username: pbartels
+  password: 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
